# textAnlayzer

./: README.md  RUN_LOG  main.py  pyproject.toml
Graph/: CheckConnection.py  PeopleConnectionGraph.py  SentencesGraph.py
tests/: test_CheckConnection.py  test_NamesCounter.py  test_Parser.py  test_PeopleConnectionGraph.py  test_PeopleKAssocions.py  test_SearchEngine.py  test_SentencesGraph.py  test_SequinceCounter.py
textAnlayzer/: PeopleKAssociations.py
