[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "text-analyzer"
version = "0.1.0"
description = "Text Analyzer: parsing, n-gram sequences, graphs, and search utilities."
authors = [{name="Your Name", email="you@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
text-analyzer = "text_analyzer.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]